--- a/src/app/styles/header.module.css
+++ b/src/app/styles/header.module.css
@@ -1,7 +1,7 @@
 .header {
     display: flex;
     justify-content: space-between;
-    background-color: rgba(250, 250, 250, 0.7);
+    background-color: var(--color-one-transparent);
     align-items: center;
     position: absolute;
     width: calc(100% - 30px);
