--- a/src/app/styles/home.module.css
+++ b/src/app/styles/home.module.css
@@ -89,7 +89,7 @@
     position: absolute;
     bottom: 16px;
     width: calc(100% - 32px);
-    background-color: rgba(250, 250, 250, 0.7);
+    background-color: var(--color-one-transparent);
     backdrop-filter: blur(4px);
     box-shadow: 0px 0px 10px 0px var(--color-drop-down-box-shadow);
 }
